2004-07-30  Patrick Mansfield <patmans@users.sourceforge.net>
	* library.c, sierra.c, sierra.h: Patch from Sean Bruno
	  <sean.bruno@dsl-only.net> to support Toshiba cameras. Added and
	  use SIERRA_NO_USB_CLEAR and SIERRA_NO_REGISTER_40 flags.

2003-11-16  Patrick Mansfield <patmans@users.sourceforge.net>
	* library.c: Only do progress updates in sierra_get_string_register
	  if a command requires multiple packets.

2003-11-16  Patrick Mansfield <patmans@users.sourceforge.net>
	* library.c, sierra.c: Enable progress checks, since the recursion
	  cases have been removed from libgphoto2 and gtkam.

2003-11-15  Patrick Mansfield <patmans@users.sourceforge.net>
	* sierra.c: Make all ifdef's the same for recursion check and add
	  a missing ifdef.

2003-11-15  Patrick Mansfield <patmans@users.sourceforge.net>
	* olympus-desc.c, sierra-desc.h, sierra.c: Add basic camera
	  description for the oly 750uz (just the zoom support and
	  oly750uz_manual for now).

2003-11-03  Patrick Mansfield <patmans@users.sourceforge.net>
	* library.c: get rid of all progress updates to fix recursion
	  during capture per bug report 805858 from Harry Mangalam. The
	  fix sucks, since we now can't update gtkam (like scroll) while
	  operations are pending, but it fixes the bug.

	  This also gets rid of a bug where do_percent was no longer
	  getting initialized.

	  This really needs a change to gtkam or the gtkam <-> gphoto
	  interface, so we do not allow recursion but we do allow updates.

2003-11-03  Patrick Mansfield <patmans@users.sourceforge.net>
	* sierra.c: mark Epson PhotoPC 650 as SIERRA_NO_51, per bug 
	  report 831290 from Brian Lee.

2003-11-03  Patrick Mansfield <patmans@users.sourceforge.net>
	* nikon-desc.c: update a comment about the behaviour of cp 880 and
	  register 30.

2003-09-17  Marcus Meissner <marcus@jet.franken.de>
	
	* library.c: we were closing a context id we never opened. Not good.

2003-09-13  Patrick Mansfield <patmans@users.sourceforge.net>